# dev_crew

./: README.md  pyproject.toml  report.md
src/crew_dev/: crew.py  main.py
src/crew_dev/tools/: custom_tool.py
